test/1.2/errors/T_EAFTER.dml
/*
  © 2021-2022 Intel Corporation
  SPDX-License-Identifier: MPL-2.0
*/
dml 1.2;

device test;

method inc(int* v) {
    ++*v;
}

method one() -> (int out) {
    out = 1;
}

method init() {
    local int v = 0;
    /// ERROR EAFTER
    after (2) call $inc(&v);
    /// ERROR EAFTER
    after (2) call $one();
}
